src/org/ffmpeg/avfilter/AvfilterLibrary.java

	/**
	 * Remove a reference to a buffer and set the pointer to NULL.<br>
	 * If this is the last reference to the buffer, the buffer itself<br>
	 * is also automatically freed.<br>
	 * * @param ref pointer to the buffer reference<br>
	 * Original signature : <code>void avfilter_unref_bufferp(AVFilterBufferRef**)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:184</i>
	 */
	public static void avfilter_unref_bufferp(Pointer<Pointer<AVFilterBufferRef > > ref) {
		avfilter_unref_bufferp(Pointer.getPeer(ref));
	}
	protected native static void avfilter_unref_bufferp(@Ptr long ref);
	/**
	 * Get the number of channels of a buffer reference.<br>
	 * Original signature : <code>int avfilter_ref_get_channels(AVFilterBufferRef*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:189</i>
	 */
	public static int avfilter_ref_get_channels(Pointer<AVFilterBufferRef > ref) {
		return avfilter_ref_get_channels(Pointer.getPeer(ref));
	}
	protected native static int avfilter_ref_get_channels(@Ptr long ref);
	/**
	 * Get the number of elements in a NULL-terminated array of AVFilterPads (e.g.<br>
	 * AVFilter.inputs/outputs).<br>
	 * Original signature : <code>int avfilter_pad_count(const AVFilterPad*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:317</i>
	 */
	public static int avfilter_pad_count(Pointer<AVFilterPad > pads) {
		return avfilter_pad_count(Pointer.getPeer(pads));
	}
	protected native static int avfilter_pad_count(@Ptr long pads);
	/**
	 * Get the name of an AVFilterPad.<br>
	 * * @param pads an array of AVFilterPads<br>
	 * @param pad_idx index of the pad in the array it; is the caller's<br>
	 *                responsibility to ensure the index is valid<br>
	 * * @return name of the pad_idx'th pad in pads<br>
	 * Original signature : <code>char* avfilter_pad_get_name(const AVFilterPad*, int)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:326</i>
	 */
	public static Pointer<Byte > avfilter_pad_get_name(Pointer<AVFilterPad > pads, int pad_idx) {
		return Pointer.pointerToAddress(avfilter_pad_get_name(Pointer.getPeer(pads), pad_idx), Byte.class);
	}
	@Ptr 
	protected native static long avfilter_pad_get_name(@Ptr long pads, int pad_idx);
	/**
	 * Get the type of an AVFilterPad.<br>
	 * * @param pads an array of AVFilterPads<br>
	 * @param pad_idx index of the pad in the array; it is the caller's<br>
	 *                responsibility to ensure the index is valid<br>
	 * * @return type of the pad_idx'th pad in pads<br>
	 * Original signature : <code>AVMediaType avfilter_pad_get_type(const AVFilterPad*, int)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:335</i>
	 */
	public static IntValuedEnum<AVMediaType > avfilter_pad_get_type(Pointer<AVFilterPad > pads, int pad_idx) {
		return FlagSet.fromValue(avfilter_pad_get_type(Pointer.getPeer(pads), pad_idx), AVMediaType.class);
	}
	protected native static int avfilter_pad_get_type(@Ptr long pads, int pad_idx);
	/**
	 * Link two filters together.<br>
	 * * @param src    the source filter<br>
	 * @param srcpad index of the output pad on the source filter<br>
	 * @param dst    the destination filter<br>
	 * @param dstpad index of the input pad on the destination filter<br>
	 * @return       zero on success<br>
	 * Original signature : <code>int avfilter_link(AVFilterContext*, unsigned, AVFilterContext*, unsigned)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:669</i>
	 */
	public static int avfilter_link(Pointer<AVFilterContext > src, int srcpad, Pointer<AVFilterContext > dst, int dstpad) {
		return avfilter_link(Pointer.getPeer(src), srcpad, Pointer.getPeer(dst), dstpad);
	}
	protected native static int avfilter_link(@Ptr long src, int srcpad, @Ptr long dst, int dstpad);
	/**
	 * Free the link in *link, and set its pointer to NULL.<br>
	 * Original signature : <code>void avfilter_link_free(AVFilterLink**)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:674</i>
	 */
	public static void avfilter_link_free(Pointer<Pointer<AVFilterLink > > link) {
		avfilter_link_free(Pointer.getPeer(link));
	}
	protected native static void avfilter_link_free(@Ptr long link);
	/**
	 * Get the number of channels of a link.<br>
	 * Original signature : <code>int avfilter_link_get_channels(AVFilterLink*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:679</i>
	 */
	public static int avfilter_link_get_channels(Pointer<AVFilterLink > link) {
		return avfilter_link_get_channels(Pointer.getPeer(link));
	}
	protected native static int avfilter_link_get_channels(@Ptr long link);
	/**
	 * Set the closed field of a link.<br>
	 * Original signature : <code>void avfilter_link_set_closed(AVFilterLink*, int)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:684</i>
	 */
	public static void avfilter_link_set_closed(Pointer<AVFilterLink > link, int closed) {
		avfilter_link_set_closed(Pointer.getPeer(link), closed);
	}
	protected native static void avfilter_link_set_closed(@Ptr long link, int closed);
	/**
	 * Negotiate the media format, dimensions, etc of all inputs to a filter.<br>
	 * * @param filter the filter to negotiate the properties for its inputs<br>
	 * @return       zero on successful negotiation<br>
	 * Original signature : <code>int avfilter_config_links(AVFilterContext*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:691</i>
	 */
	public static int avfilter_config_links(Pointer<AVFilterContext > filter) {
		return avfilter_config_links(Pointer.getPeer(filter));
	}
	protected native static int avfilter_config_links(@Ptr long filter);
	/**
	 * Create a buffer reference wrapped around an already allocated image<br>
	 * buffer.<br>
	 * * @param data pointers to the planes of the image to reference<br>
	 * @param linesize linesizes for the planes of the image to reference<br>
	 * @param perms the required access permissions<br>
	 * @param w the width of the image specified by the data and linesize arrays<br>
	 * @param h the height of the image specified by the data and linesize arrays<br>
	 * @param format the pixel format of the image specified by the data and linesize arrays<br>
	 * Original signature : <code>AVFilterBufferRef* avfilter_get_video_buffer_ref_from_arrays(const uint8_t*[4], const int[4], int, int, int, AVPixelFormat)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:703</i>
	 */
	public static Pointer<AVFilterBufferRef > avfilter_get_video_buffer_ref_from_arrays(Pointer<Pointer<Byte > > data, Pointer<Integer > linesize, int perms, int w, int h, IntValuedEnum<AVPixelFormat > format) {
		return Pointer.pointerToAddress(avfilter_get_video_buffer_ref_from_arrays(Pointer.getPeer(data), Pointer.getPeer(linesize), perms, w, h, (int)format.value()), AVFilterBufferRef.class);
	}
	@Ptr 
	protected native static long avfilter_get_video_buffer_ref_from_arrays(@Ptr long data, @Ptr long linesize, int perms, int w, int h, int format);
	/**
	 * Create an audio buffer reference wrapped around an already<br>
	 * allocated samples buffer.<br>
	 * * See avfilter_get_audio_buffer_ref_from_arrays_channels() for a version<br>
	 * that can handle unknown channel layouts.<br>
	 * * @param data           pointers to the samples plane buffers<br>
	 * @param linesize       linesize for the samples plane buffers<br>
	 * @param perms          the required access permissions<br>
	 * @param nb_samples     number of samples per channel<br>
	 * @param sample_fmt     the format of each sample in the buffer to allocate<br>
	 * @param channel_layout the channel layout of the buffer<br>
	 * Original signature : <code>AVFilterBufferRef* avfilter_get_audio_buffer_ref_from_arrays(uint8_t**, int, int, int, AVSampleFormat, uint64_t)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:717</i>
	 */
	public static Pointer<AVFilterBufferRef > avfilter_get_audio_buffer_ref_from_arrays(Pointer<Pointer<Byte > > data, int linesize, int perms, int nb_samples, IntValuedEnum<AVSampleFormat > sample_fmt, long channel_layout) {
		return Pointer.pointerToAddress(avfilter_get_audio_buffer_ref_from_arrays(Pointer.getPeer(data), linesize, perms, nb_samples, (int)sample_fmt.value(), channel_layout), AVFilterBufferRef.class);
	}
	@Ptr 
	protected native static long avfilter_get_audio_buffer_ref_from_arrays(@Ptr long data, int linesize, int perms, int nb_samples, int sample_fmt, long channel_layout);
	/**
	 * Create an audio buffer reference wrapped around an already<br>
	 * allocated samples buffer.<br>
	 * * @param data           pointers to the samples plane buffers<br>
	 * @param linesize       linesize for the samples plane buffers<br>
	 * @param perms          the required access permissions<br>
	 * @param nb_samples     number of samples per channel<br>
	 * @param sample_fmt     the format of each sample in the buffer to allocate<br>
	 * @param channels       the number of channels of the buffer<br>
	 * @param channel_layout the channel layout of the buffer,<br>
	 *                       must be either 0 or consistent with channels<br>
	 * Original signature : <code>AVFilterBufferRef* avfilter_get_audio_buffer_ref_from_arrays_channels(uint8_t**, int, int, int, AVSampleFormat, int, uint64_t)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:731</i>
	 */
	public static Pointer<AVFilterBufferRef > avfilter_get_audio_buffer_ref_from_arrays_channels(Pointer<Pointer<Byte > > data, int linesize, int perms, int nb_samples, IntValuedEnum<AVSampleFormat > sample_fmt, int channels, long channel_layout) {
		return Pointer.pointerToAddress(avfilter_get_audio_buffer_ref_from_arrays_channels(Pointer.getPeer(data), linesize, perms, nb_samples, (int)sample_fmt.value(), channels, channel_layout), AVFilterBufferRef.class);
	}
	@Ptr 
	protected native static long avfilter_get_audio_buffer_ref_from_arrays_channels(@Ptr long data, int linesize, int perms, int nb_samples, int sample_fmt, int channels, long channel_layout);
	/**
	 * Make the filter instance process a command.<br>
	 * It is recommended to use avfilter_graph_send_command().<br>
	 * Original signature : <code>int avfilter_process_command(AVFilterContext*, const char*, const char*, char*, int, int)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:737</i>
	 */
	public static int avfilter_process_command(Pointer<AVFilterContext > filter, Pointer<Byte > cmd, Pointer<Byte > arg, Pointer<Byte > res, int res_len, int flags) {
		return avfilter_process_command(Pointer.getPeer(filter), Pointer.getPeer(cmd), Pointer.getPeer(arg), Pointer.getPeer(res), res_len, flags);
	}
	protected native static int avfilter_process_command(@Ptr long filter, @Ptr long cmd, @Ptr long arg, @Ptr long res, int res_len, int flags);
	/**
	 * Initialize the filter system. Register all builtin filters.<br>
	 * Original signature : <code>void avfilter_register_all()</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:742</i>
	 */
	public static native void avfilter_register_all();
	/**
	 * Uninitialize the filter system. Unregister all filters.<br>
	 * Original signature : <code>void avfilter_uninit()</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:747</i>
	 */
	public static native void avfilter_uninit();
	/**
	 * Register a filter. This is only needed if you plan to use<br>
	 * avfilter_get_by_name later to lookup the AVFilter structure by name. A<br>
	 * filter can still by instantiated with avfilter_graph_alloc_filter even if it<br>
	 * is not registered.<br>
	 * * @param filter the filter to register<br>
	 * @return 0 if the registration was successful, a negative value<br>
	 * otherwise<br>
	 * Original signature : <code>int avfilter_register(AVFilter*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:758</i>
	 */
	public static int avfilter_register(Pointer<AVFilter > filter) {
		return avfilter_register(Pointer.getPeer(filter));
	}
	protected native static int avfilter_register(@Ptr long filter);
